# contactless

./: .clang-format  .env.example  .gitignore  .gitmodules  .travis.yml  API.paw  CMakeLists.txt  README.md  Untitled Diagram.drawio  nvs_data.csv  partitions.csv  platformio.ini  public.key  sdkconfig.defaults
main/: CMakeLists.txt  buzzer.c  buzzer.h  constants.c  constants.h  device_id.c  device_id.h  display.c  display.h  esp_efuse_custom_table.c  esp_efuse_custom_table.csv  esp_efuse_custom_table.h  event_group.h  event_system.h  fetch_config.c  fetch_config.h  http_auth_headers.c  http_auth_headers.h  http_event_handler.c  http_event_handler.h  idf_component.yml  keypad.c  keypad.h  kvec.h  local_config.c  local_config.h  log_uploader.c  log_uploader.h  log_writer.c  log_writer.h  logger.c  logger.h  main.c  power_management.c  power_management.h  rfid.c  rfid.h  state_machine.c  state_machine.h  time_sync.c  (+5 more)
proto/: config.pb  config.pb.c  config.pb.h  logmessage.pb  logmessage.pb.c  logmessage.pb.h
scripts/: build_number.py  buildnumber.sh  deploy.sh  efuse_table.sh  efuse_write.sh  flash_nvs_data.sh  proto.sh  setup_env.py
src/: BuildNumber.h  Buildnumber.h  Buzzer.cpp  Buzzer.h  BuzzerCoroutine.cpp  BuzzerCoroutine.h  Card.cpp  Card.h  ChargeManualCoroutine.cpp  ChargeManualCoroutine.h  ChargeWithoutCardCoroutine.cpp  ChargeWithoutCardCoroutine.h  ChargeWithoutCatdCoroutine.cpp  ChargeWithoutCatdCoroutine.h  Config.cpp  Config.h  ConfigCoroutine.cpp  ConfigCoroutine.h  Constants.h  Display.cpp  Display.h  DisplayCoroutine.cpp  DisplayCoroutine.h  Keypad.cpp  (+31 more)
(+38 files in other folders)
